[gd_scene load_steps=4 format=3 uid="uid://bd60js4wx3a51"]

[ext_resource type="Texture2D" uid="uid://ctkvxmp35m08u" path="res://assets/images/desk.svg" id="1_em11a"]
[ext_resource type="Script" uid="uid://bbhbly3fdgx2g" path="res://scripts/desk.gd" id="2_e7kfv"]
[ext_resource type="FontFile" uid="uid://c7o2pcusg538i" path="res://themes/leaguespartan-bold.ttf" id="3_e7kfv"]

[node name="desk" type="Control"]
layout_mode = 3
anchors_preset = 0
mouse_filter = 1
script = ExtResource("2_e7kfv")

[node name="button" type="TextureButton" parent="."]
z_index = -10
layout_mode = 0
offset_left = -128.0
offset_top = -128.0
offset_right = 128.0
offset_bottom = 128.0
texture_normal = ExtResource("1_em11a")

[node name="text_pivot" type="Control" parent="button"]
layout_mode = 1
anchors_preset = 0
offset_left = 128.0
offset_top = 128.0
offset_right = 128.0
offset_bottom = 128.0

[node name="text" type="Label" parent="button/text_pivot"]
z_index = 1
layout_mode = 0
offset_left = -628.0
offset_top = -128.0
offset_right = 628.0
offset_bottom = 128.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("3_e7kfv")
theme_override_font_sizes/font_size = 50
horizontal_alignment = 1
vertical_alignment = 1

[node name="loadtimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true
autostart = true

[connection signal="button_down" from="button" to="." method="_on_button_down"]
[connection signal="button_up" from="button" to="." method="_on_button_up"]
[connection signal="timeout" from="loadtimer" to="." method="_on_loadtimer_timeout"]
